--- a/src/templates/en/2019/contributors.html
+++ b/src/templates/en/2019/contributors.html
@@ -1,485 +1,15 @@
-{% extends "en/2019/base.html" %}
+{% extends "base/2019/contributors.html" %}
 
 {% block title %}2019 Contributors | The Web Almanac by HTTP Archive{% endblock %}
 
 {% block description %}The {{ config.contributors.items() | length }} people who contributed to the 2019 Web Almanac as Analysts, Authors, Brainstormers, Designers, Developers, Editors, Reviewers and Translators.{% endblock %}
 
-{% block meta %}
-<meta name="description" content="{{ self.description() }}">
+{% block date_published %}2019-11-04T12:00:00+00:00:00{% endblock %}
+{% block date_modified %}2019-11-04T12:00:00+00:00:00{% endblock %}
 
-<meta property="og:title" content="{{ self.title() }}">
-<meta property="og:url" content="https://almanac.httparchive.org{{  url_for(request.endpoint, year=year, lang=lang) }}">
-<meta property="og:image" content="https://almanac.httparchive.org/static/images/methodology-characters-bg.png">
-<meta property="og:image:height" content="354">
-<meta property="og:image:width" content="984">
-<meta property="og:type" content="article">
-<meta property="og:description" content="{{ self.description() }}">
+{% block breadcrumb_name_2 %}{{ year }} Contributors){% endblock %}
 
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@HTTPArchive">
-<meta name="twitter:title" content="{{ self.title() }}">
-<meta name="twitter:image" content="https://almanac.httparchive.org/static/images/methodology-characters-bg.png">
-<meta name="twitter:image:alt" content="{{ year }} Web Almanac methodology" />
-<meta name="twitter:description" content="{{ self.description() }}">
+{% block filter_by_team %}Filter by team:{% endblock %}
 
-<script type="application/ld+json">
-	{
-	  "@context": "http://schema.org",
-	  "@type": "Article",
-	  "mainEntityOfPage": {
-	  	  "@type": "WebPage",
-	  	  "@id": "https://almanac.httparchive.org{{  url_for(request.endpoint, **get_view_args(lang=language.lang_code, year=year)) }}"
-	  },
-	  "headline": "{{ self.title() }}",
-	  "image": {
-	  	  "@type": "ImageObject",
-	  	  "url": "https://almanac.httparchive.org/static/images/methodology-characters-bg.png",
-	  	  "height": 354,
-	  	  "width": 984
-	  },
-	  "publisher": {
-	  	  "@type": "Organization",
-	  	  "name": "HTTP Archive",
-	  	  "logo": {
-	  	      "@type": "ImageObject",
-	  	      "url": "https://almanac.httparchive.org/static/images/ha.png",
-	  	      "height": 160,
-	  	      "width": 320
-	  	  }
-      },
-    "author":
-      {
-	  	  "@type": "Person",
-          "sameas": [
-            "https://almanac.httparchive.org{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}",
-            "https://twitter.com/rick_viscomi",
-            "https://github.com/rviscomi"
-            ],
-	  	  "name": "Rick Viscomi"
-      },
-      "description": "{{ self.description() }}",
-      "datePublished": "2019-11-04T12:00:00+00:00:00",
-      "dateModified": "2019-11-04T12:00:00+00:00:00"
-	}
-	</script>
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "BreadcrumbList",
-      "itemListElement": [{
-        "@type": "ListItem",
-        "position": 1,
-        "name": "{{ year }} Home ({{ language }})",
-        "item": "https://almanac.httparchive.org{{  url_for('home', year=year, lang=lang) }}"
-      },{
-        "@type": "ListItem",
-        "position": 2,
-        "name": "{{ year }} contributors",
-        "item": "https://almanac.httparchive.org{{  url_for(request.endpoint, year=year, lang=lang) }}"
-      }]
-    }
-    </script>
-{% endblock %}
-
-{% block styles %}
-{{ super() }}
-<style>
-.team {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  overflow: hidden;
-  height: 200px;
-  justify-content: space-between;
-  margin: 0 0 24px 0;
-}
-.team img {
-  height: 200px;
-  width: 200px;
-}
-.contributors {
-  margin: 0 0 100px 0;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-.filter-container {
-  margin-bottom: 30px;
-}
-
-.filter-container button {
-  font-size: 1rem;
-  font-family: inherit;
-  line-height: 1.2;
-  background: none;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 0 8px 8px 0;
-  padding: 8px 16px;
-  -webkit-font-smoothing: antialiased;
-}
-
-.contributor-grid {
-  display: flex;
-  align-items: stretch;
-  flex-direction: row;
-  justify-content: start;
-  flex-wrap: wrap;
-  margin: 0 -15px;
-  justify-content: center;
-}
-
-.contributor-grid:not([data-rendered='true']) .contributor {
-  transform: translateY(30px);
-  opacity: 0;
-  will-change: opacity;
-}
-
-.contributor-grid[data-rendered='true'] .contributor {
-  animation-name: fade-in;
-  animation-duration: 750ms;
-}
-.contributor-grid[data-rendered='true'] .contributor:nth-of-type(0) {
-  animation-duration: 250ms;
-}
-.contributor-grid[data-rendered='true'] .contributor:nth-of-type(1) {
-  animation-duration: 350ms;
-}
-.contributor-grid[data-rendered='true'] .contributor:nth-of-type(2) {
-  animation-duration: 450ms;
-}
-.contributor-grid[data-rendered='true'] .contributor:nth-of-type(3) {
-  animation-duration: 600ms;
-}
-
-.contributor,
-.contributor-join {
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 15px;
-  box-shadow: 0 0 16px 0 rgba(78, 85, 100, 0.2);
-  padding: 24px 34px;
-  width: 230px;
-  margin: 10px;
-}
-
-.contributor:focus .contributor-avatar{
-    transform: scale(1.1);
-}
-
-.contributor-avatar {
-  border-radius: 50px;
-  background-color: #f7f779;
-  margin-bottom: 10px;
-  width: 100px;
-  height: auto;
-  transition-duration: .3s;
-}
-
-.contributor-name {
-  text-align: center;
-  font-style: italic;
-  font-size: 17px;
-  margin-bottom: 10px;
-}
-
-.contributor-social {
-  flex: 1
-}
-
-.contributor-social img {
-  height: auto;
-  width: 18px;
-  margin: 0 6px 0 0;
-}
-
-.contributor-teams {
-  margin-top: 5px;
-  text-align: center;
-}
-
-.contributor-team {
-  font-size: 14px;
-  color: #757575;
-}
-.contributor-team::after {
-  content: ', ';
-}
-.contributor-team:last-child::after {
-  content: '';
-}
-
-{% for id in config.teams.keys() %}
-.contributors.{{ id }} .contributor.{{ id }} {
-  display: flex;
-}
-
-.contributors.{{ id }} button.{{ id }} {
-  background: #f7f779;
-  color: #333;
-}
-{% endfor %}
-
-@media (max-width: 600px) {
-  .team {
-    height: 100px;
-  }
-  .team img {
-     width: 100px;
-     height: 100px;
-  }
-  .filter-container {
-      margin: 0;
-  }
-
-  {% for id in config.teams.keys() %}
-  .contributors.{{ id }} .contributor.{{ id }} {
-    display: grid;
-  }
-  {% endfor %}
-
-  .contributor {
-    flex: 1;
-    display: none;/* will be set to grid */
-    grid-template-columns: 100px 3fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 0;
-    padding: 20px 16px;
-
-  }
-  .contributor div {
-      text-align: left;
-  }
-
-  .contributor-avatar {
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 1;
-    grid-row-end: 4;
-    width: 80px;
-    height: auto;
-    margin: 0;
-  }
-}
-
-@keyframes fade-in {
-  0% {
-    transform: translateY(30px);
-    opacity: 0;
-  }
-  30% {
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-    }
-}
-
-/* Join the team card */
-.contributor-join {
-  display: flex;
-  border: 5px dashed #5e687c;  
-  justify-content: center;
-}
-
-.contributor-join:hover {
-  transform: scale(1.05);
-}
-
-.contributor-join svg {
-  margin-bottom: -10px;
-  z-index: 1;
-}
-
-.contributor-join path {
-  fill: #5e687c;
-}
-
-.contributor-join text {
-  fill: #fff; 
-  font-weight: bold;
-  text-anchor: middle;
-}
-
-@media (max-width: 600px) {
-  .contributor-join {
-    flex: 1;
-    padding: 20px 16px;
-  }
-}
-</style>
-{% endblock %}
-
-{% block main %}
-<main id="maincontent" class="main">
-  <h1 class="title title-lg">
-    Contributors
-  </h1>
-  <div class="team">
-      <img src="/static/images/avatars/1.jpg" alt="" height="100" width="100" loading="lazy" />
-      <img src="/static/images/avatars/8.jpg" alt="" height="100" width="100" loading="lazy" />
-      <img src="/static/images/avatars/4.jpg" alt="" height="100" width="100" loading="lazy" />
-      <img src="/static/images/avatars/0.jpg" alt="" height="100" width="100" loading="lazy" />
-      <img src="/static/images/avatars/11.jpg" alt="" height="100" width="100" loading="lazy" />
-      <img src="/static/images/avatars/9.jpg" alt="" height="100" width="100" loading="lazy" />
-  </div>
-  <div class="contributors {{ ' '.join(config.teams.keys()) }}">
-    <div class="filter-container">
-      <p>
-        Filter by team:
-        <span id="filtered-contributors">{{ config.contributors.items() | length }}</span> contributors
-      </p>
-      {% set localizedTeamNames = {
-        "analysts": "Analysts",
-        "authors": "Authors",
-        "brainstormers": "Brainstormers",
-        "designers": "Designers",
-        "developers": "Developers",
-        "editors": "Editors",
-        "reviewers": "Reviewers",
-        "translators": "Translators", 
-        } %}
-        {% for id, team in config.teams.items() %}
-          <button class="{{ id }}" type="button">{{ localizedTeamNames[id] if localizedTeamNames[id]|length else team.name }}</button>
-        {% endfor %}
-    </div>
-
-    <div class="contributor-grid">
-      <a href="https://forms.gle/Qyf3q5pKgdH1cBhq5" class="contributor-join" aria-labelledby="jointheteam">
-        <svg xmlns="http://www.w3.org/2000/svg" role="img" width="174" height="100" viewBox="0 0 203 117">
-          <title id="jointheteam">Join the Web Almanac team</title>
-          <path d="M0 0l11 89 71 4.4L65.9 117l40.7-22.4L201 89l2-79z" />
-          <text x="50%" y="47%">
-            Join the team!
-          </text>
-        </svg>
-        <img src="/static/images/avatars/12.jpg" alt="" height="100" width="100" loading="lazy" />
-      </a>  
-    {% for id, contributor in config.contributors.items() %}
-      <div class="contributor {{ ' '.join(contributor.teams) }}" id="{{ id }}">
-        <img class="contributor-avatar" src="{{contributor.avatar_url}}" height="100" width="100" alt="{{ contributor.name }} avatar" loading="lazy" />
-        <div class="contributor-name">{{ contributor.name }}</div>
-
-        <div class="contributor-social">
-          {% if contributor.twitter %}
-          <a href="https://twitter.com/{{ contributor.twitter }}" target="_blank" title="{{ contributor.twitter }} on Twitter"><img src="/static/images/twitter.png" alt="Twitter" height="65" width="80" loading="lazy" /></a>
-          {% endif %}
-          {% if contributor.github %}
-          <a href="https://github.com/{{ contributor.github }}" target="_blank" title="{{ contributor.github }} on GitHub"><img src="/static/images/github.png" alt="GitHub" height="78" width="80" loading="lazy" /></a>
-          {% endif %}
-          {% if contributor.website %}
-          <a href="{{ contributor.website }}" target="_blank" title="{{ contributor.name }} website"><img src="/static/images/blog.png" alt="website" height="72" width="72" loading="lazy" /></a>
-          {% endif %}
-        </div>
-
-        <div class="contributor-teams">
-          {% for id in contributor.teams | sort() %}
-            <span class="contributor-team team-{{ id }}">{{ config.teams[id].name }}</span>
-          {% endfor %}
-        </div>
-      </div>
-    {% endfor %}
-    </div>
-  </div>
-</main>
-{% endblock %}
-
-{% block scripts %}
-  {{ super() }}
-  <script nonce="{{ csp_nonce() }}">
-(function loaded() {
-    var teams = ['{{ "','".join(config.teams.keys()) | safe }}'];
-    var buttons = document.querySelectorAll('.filter-container button');
-    var contributors = document.querySelector('.contributors');
-    var contributorsGrid = document.querySelector('.contributor-grid');
-    var counter = document.querySelector('#filtered-contributors');
-    var shadowNode = document.createElement('div');
-    var urlObject = new URL(document.location);
-
-    function getFilteredContributorCount() {
-      return Array.from(document.querySelectorAll('.contributor')).filter(function(el) {
-        return getComputedStyle(el).display != 'none';
-      }).length;
-    }
-
-    for (var i = 0; i < buttons.length; i++) {
-      var button = buttons[i];
-      button.addEventListener('click', function(event) {
-        event.preventDefault();
-
-        var teamName = event.target.className;
-
-        shadowNode.className = contributors.className;
-        if(shadowNode.classList.length == (teams.length + 1)) {
-            teams.forEach(function(team) {
-                if(team === teamName) {
-                    return;
-                }
-                shadowNode.classList.toggle(team);
-            });
-        } else if (shadowNode.classList.length == 2 && shadowNode.classList.contains(teamName)) {
-            teams.forEach(function(team) {
-                shadowNode.classList.add(team);
-            });
-        } else {
-            shadowNode.classList.toggle(teamName);
-        }
-
-        var selected = [];
-        teams.forEach(function(team) {
-            if(shadowNode.classList.contains(team)) {
-                selected.push(team);
-            }
-        });
-
-        if(selected.length > 0 && selected.length < teams.length){
-            urlObject.searchParams.set('teams', selected.join(','));
-            history.pushState(null, null, urlObject);
-            handleFilterUrl();
-        } else {
-            urlObject.searchParams.delete('teams');
-            history.pushState(null, null, urlObject);
-            handleFilterUrl();
-        }
-
-        counter.innerText = getFilteredContributorCount();
-      });
-    }
-
-    try {
-        var hash = document.location.hash;
-        var highlight = document.querySelector(hash);
-        highlight.focus();
-    } catch(e) { }
-
-    function handleFilterUrl(event) {
-
-        event && event.preventDefault();
-        var urlObject = new URL(document.location);
-        if(urlObject.searchParams.has('teams')) {
-
-            var hash = urlObject.searchParams.get('teams');
-            var filterTeams = hash.split(',');
-
-            if(teams.includes(filterTeams[0])) {
-                contributors.classList.remove(...teams);
-                contributors.classList.add(...filterTeams);
-            }
-        } else {
-            contributors.classList.add(...teams);
-        }
-    }
-    window.addEventListener('popstate', handleFilterUrl);
-    handleFilterUrl();
-
-    contributorsGrid.setAttribute('data-rendered', true);
-})();
-
-  </script>
-  <!-- add chapter.js to handle print mode and avoid duplicating code -->
-  <script src='/static/js/chapter.js?v=2' defer></script>
-{% endblock %}
+{% block join_the_team_title%}Join the Web Almanac team{% endblock %}
+{% block join_the_team_text%}Join the team!{% endblock %}
