--- a/src/templates/en/2019/base_chapter.html
+++ b/src/templates/en/2019/base_chapter.html
@@ -1,165 +1,26 @@
-{% extends "en/2019/base.html" %}
+{% extends "base/2019/base_chapter.html" %}
 
 {% block title %}{{ metadata.get('title') }} | 2019 | The Web Almanac by HTTP Archive{% endblock %}
 
-{% block styles %}
-{{ super() }}
-<link rel="stylesheet" href="/static/css/page.css?v=2">
-{% endblock %}
+{% block description %}{{ metadata.get('description',metadata.get('title') + ' chapter of the ' + year + ' Web Almanac probing into the use of ' + metadata.get('description',metadata.get('title')) + ' on the web.') }}{% endblock %}
 
-{% block scripts %}
-{{ super() }}
-<script nonce="{{ csp_nonce() }}">
-  
-var indexBox = document.querySelector('.index-box');
-var indexBoxTitle = document.querySelector('.index .index-btn');
- 
-indexBoxTitle.addEventListener('click', function(e) {
-  var indexOpen = indexBox.classList.toggle('show');
-  indexBoxTitle.setAttribute('aria-expanded',indexOpen);
-  var ariaLabel = indexOpen ?  "Close the Table of Contents" : "Open the Table of Contents";
-  indexBoxTitle.setAttribute('aria-label',ariaLabel);
-});
-        
-indexBox.addEventListener("keydown", function onPress(event) {
-  if (event.key === 'Escape') {
-    if (indexBoxTitle.getAttribute('aria-expanded') === 'true') {
-      indexBoxTitle.click();
-      indexBoxTitle.focus();
-    }
-  }
-});
+{% block twitter_image_alt %}Chapter image for the {{ metadata.get('title') }} chapter of the {{ year }} Web Almanac{% endblock %}
 
-document.addEventListener("keyup", function onPress(event) {
- 	if (event.key === 'p' || event.key === 'P' || event.key === ',' || event.key === '<' || event.key === 'ArrowLeft') {
- 	  var previous = document.getElementById('previous-chapter');
- 	  if (previous) {
- 	    previous.click();
- 		}
- 	}
- 	if (event.key === 'n' || event.key === 'N' || event.key === '.' || event.key === '>' || event.key === 'ArrowRight') {
- 	  var next = document.getElementById('next-chapter');
- 	  if (next) {
- 	    next.click();
- 	  }
- 	}
-});
+{% block breadcrumb_name_2 %}{{ metadata.get('title') }}{% endblock %}
 
-window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}.json";
-</script>
+{% block unedited %}[Unedited]{% endblock %}
 
-<script src='/static/js/chapter.js?v=2' defer></script>
+{% block prev_next_title %}Previous and next chapter navigation{% endblock %}
 
-{% endblock %}
+{% block discuss_this_chapter %}Discuss this chapter{% endblock %}
+{% block comment %}comment{% endblock %}
+{% block comments %}comments{% endblock %}
+{% block written_by %}Written by{% endblock %}
+{% block reviewed_by %}Reviewed by{% endblock %}
+{% block translated_by %}Translated by{% endblock %}
 
-{# Calls to action for readers who want to engage more with this chapter. #}
-{% macro render_actions() %}
-  <div class="discuss">
-    <a class="alt btn" href="https://discuss.httparchive.org/t/{{ metadata.get('discuss') }}">
-      <img src="/static/images/discuss.png" alt="Discuss this chapter" height="24" width="24" loading="lazy" /><span id="num_comments"></span> <span data-translation id="comment-singular">comment</span><span data-translation id="comment-plural">comments</span>
-    </a>
-  </div>
-{% endmacro %}
+{% block author %}Author{% endblock %}
+{% block authors %}Authors{% endblock %}
 
-
-{% macro render_byline() %}
-  <div class="byline">Written by
-  {% for author in metadata.get('authors') %}
-    <a class="author" href="{{ url_for('contributors', year=year, lang=lang, _anchor=author) }}">{{ config.contributors[author].name if author in config.contributors else author }}</a>{% if loop.index != loop.length and loop.length != 2 %},{% endif %}
-    {% if loop.index == loop.length - 1 %} and{% endif %}
-  {% endfor %}
-  </div>
-
-  <div class="byline reviewers">Reviewed by
-  {% for reviewer in metadata.get('reviewers') %}
-    <a class="reviewer" href="{{ url_for('contributors', year=year, lang=lang, _anchor=reviewer) }}">{{ config.contributors[reviewer].name if reviewer in config.contributors else reviewer }}</a>{% if loop.index != loop.length and loop.length != 2 %},{% endif %}
-    {% if loop.index == loop.length - 1 %} and{% endif %}
-  {% endfor %}
-  </div>
-
-  {% if metadata.get('translators') | length >= 1 %}
-  <div class="byline translators">Translated by
-  {% for translator in metadata.get('translators') %}
-    <a class="translator" href="{{ url_for('contributors', year=year, lang=lang, _anchor=translator) }}">{{ config.contributors[translator].name if translator in config.contributors else translator }}</a>{% if loop.index != loop.length and loop.length != 2 %},{% endif %}
-    {% if loop.index == loop.length - 1 %} and{% endif %}
-  {% endfor %}
-  </div>
-  {% endif %}
-{% endmacro %}
-
-{% macro render_authors() %}
-  {% for author in metadata.get('authors') %}
-  {% if loop.length == 1 %}<h2>Author</h2>{% endif -%}
-  {% if loop.length > 1 and loop.index == 1 %}<h2>Authors</h2>{% endif %}
-  {% if loop.index == 1 %}<ul>{% endif %}
-      {% set authordata = config.contributors[author] if author in config.contributors else None %}
-    {% if authordata %}
-      <li>
-          <div aria-hidden="true">
-            <a href="https://almanac.httparchive.org{{ url_for('contributors', year=year, lang=lang, _anchor=author) }}" tabindex="-1">
-              <img class="avatar" alt="{{ authordata.name }} avatar" src="{{ authordata.avatar_url }}" height="200" width="200" loading="lazy" />
-            </a>
-          </div>
-          <div class="info">
-            <a href="https://almanac.httparchive.org{{ url_for('contributors', year=year, lang=lang, _anchor=author) }}"><span class="name">{{ authordata.name if authordata.name else author }}</span></a>
-              {% if authordata.twitter or authordata.github %}
-                  <span class="social">
-                  {% if authordata.twitter %}
-                  <a class="twitter" href="https://twitter.com/{{ authordata.twitter }}"><img src="/static/images/twitter.png" alt="@{{ authordata.twitter }} on Twitter" height="65" width="80" loading="lazy" /></a>
-                  {% endif %}
-                  {% if authordata.github %}
-                  <a class="github" href="https://github.com/{{ authordata.github }}"><img src="/static/images/github.png" alt="{{ authordata.github }} on GitHub" height="78" width="80" loading="lazy" /></a>
-                  {% endif %}
-                  {% if authordata.website %}
-                  <a class="website" href="{{ authordata.website }}"><img src="/static/images/blog.png" alt="{{ authordata.name }} website" height="72" width="72" loading="lazy" /></a>
-                  {% endif %}
-                  </span>
-              {% endif %}
-              {% if authordata.tagline %}
-                  <div class="tagline">
-                      {{ authordata.tagline }}
-                  </div>
-              {% endif %}
-              {% if authordata.bio %}
-              <div class="bio">
-                  {{ authordata.bio | safe }}
-              </div>
-          {% endif %}
-          </div>
-      </li>
-    {% else %}
-      <li>
-          <div class="info">
-            <span class="name">{{ author }}</span>
-          </div>
-      </li>
-    {% endif %}
-  {% endfor %}
-</ul>
-{% endmacro %}
-
-{% macro render_prevnext() %}
-  {% if prev_chapter %}
-      <a id="previous-chapter" title="Previous Chapter (press 'p' or ',')" href="/{{lang}}/{{year}}/{{prev_chapter['title'].lower().replace(' ', '-').replace('/', '')}}">
-          <span class="arrow">&#8963;</span>
-          <span class="chapter-no">
-              Chapter {{ prev_chapter['chapter'] }}
-          </span>
-          <span class="chapter-title">
-              {{ prev_chapter['title'] }}
-          </span>
-      </a>
-  {% endif %}
-
-  {% if next_chapter %}
-      <a id="next-chapter" title="Next Chapter (press 'n' or '.')" href="/{{lang}}/{{year}}/{{next_chapter['title'].lower().replace(' ', '-').replace('/', '')}}">
-              <span class="arrow">&#8963;</span>
-              <span class="chapter-no">
-                  Chapter {{ next_chapter['chapter'] }}
-              </span>
-              <span class="chapter-title">
-                  {{ next_chapter['title'] }}
-              </span>
-      </a>
-  {% endif %}
-{% endmacro %}
+{% block previous %}Previous Chapter (press 'p' or ','){% endblock %}
+{% block next %}Next Chapter (press 'n' or '.'){% endblock %}
