--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -1,99 +1,17 @@
-{% extends "en/2019/base.html" %}
+{% extends "base/2019/methodology.html" %}
 
 {% block title %}Methodology | The Web Almanac by HTTP Archive{% endblock %}
 
 {% block description %}Describes how the 2019 Web Almanac was put together: The Datasets and Tools used and how the project was run.{% endblock %}
 
-{% block meta %}
-<meta name="description" content="{{ self.description() }}">
+{% block twitter_image_alt %}{{ year }} Web Almanac methodology{% endblock %}
 
-<meta property="og:title" content="{{ self.title() }}">
-<meta property="og:url" content="https://almanac.httparchive.org{{  url_for(request.endpoint, **get_view_args(lang=language.lang_code, year=year)) }}">
-<meta property="og:image" content="https://almanac.httparchive.org/static/images/methodology-banner.png">
-<meta property="og:image:height" content="984">
-<meta property="og:image:width" content="1200">
-<meta property="og:type" content="article">
-<meta property="og:description" content="{{ self.description() }}">
+{% block date_published %}2019-11-04T12:00:00+00:00:00{% endblock %}
+{% block date_modified %}2019-11-04T12:00:00+00:00:00{% endblock %}
 
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@HTTPArchive">
-<meta name="twitter:title" content="{{ self.title() }}">
-<meta name="twitter:image" content="https://almanac.httparchive.org/static/images/methodology-banner.png">
-<meta name="twitter:image:alt" content="{{ year }} Web Almanac methodology" />
-<meta name="twitter:description" content="{{ self.description() }}">
+{% block breadcrumb_name_2 %}{{ year }} Methodology{% endblock %}
 
-<script type="application/ld+json">
-	{
-	  "@context": "http://schema.org",
-	  "@type": "Article",
-	  "mainEntityOfPage": {
-	  	  "@type": "WebPage",
-	  	  "@id": "https://almanac.httparchive.org{{  url_for(request.endpoint, year=year, lang=lang) }}"
-	  },
-	  "headline": "{{ self.title() }}",
-	  "image": {
-	  	  "@type": "ImageObject",
-	  	  "url": "https://almanac.httparchive.org/static/images/methodology-banner.png",
-	  	  "height": 984,
-	  	  "width": 1200
-	  },
-	  "publisher": {
-	  	  "@type": "Organization",
-	  	  "name": "HTTP Archive",
-	  	  "logo": {
-	  	      "@type": "ImageObject",
-	  	      "url": "https://almanac.httparchive.org/static/images/ha.png",
-	  	      "height": 160,
-	  	      "width": 320
-	  	  }
-      },
-    "author":
-      {
-	  	  "@type": "Person",
-          "sameas": [
-            "https://almanac.httparchive.org{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}",
-            "https://twitter.com/rick_viscomi",
-            "https://github.com/rviscomi"
-            ],
-	  	  "name": "Rick Viscomi"
-      },
-      "description": "{{ self.description() }}",
-      "datePublished": "2019-11-04T12:00:00+00:00:00",
-      "dateModified": "2019-11-04T12:00:00+00:00:00"
-	}
-  </script>
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "BreadcrumbList",
-      "itemListElement": [{
-        "@type": "ListItem",
-        "position": 1,
-        "name": "{{ year }} Home ({{ language }})",
-        "item": "https://almanac.httparchive.org{{  url_for('home', year=year, lang=lang) }}"
-      },{
-        "@type": "ListItem",
-        "position": 2,
-        "name": "{{ year }} Methodology",
-        "item": "https://almanac.httparchive.org{{  url_for(request.endpoint, year=year, lang=lang) }}"
-      }]
-    }
-    </script>
-{% endblock %}
-
-{% block styles %}
-{{ super() }}
-<link rel="stylesheet" href="/static/css/page.css?v=2">
-{% endblock %}
-
-{% block main %}
-<main id="methodology" class="main">
-  <nav class="index">
-    <div class="index-box floating-card">
-      <h2 class="header">
-        <button class="index-btn">Index</button>
-        <span class="no-button">Index</span>
-      </h2>
+{% block index %}
       <ul>
         <li><a href="#overview">Overview</a></li>
         <li><a href="#dataset">About the dataset</a>
@@ -121,12 +39,9 @@
         </li>
         <li><a href="#looking-ahead">Looking ahead</a></li>
       </ul>
-    </div>
-  </nav>
+{% endblock %}
 
-  <article id="maincontent" class="content">
-    <h1 class="title title-lg">Methodology</h1>
-
+{% block main_content %}
     <section>
       <!-- Show large image for large screens and high density screens and use webp when supported -->
       <picture>
@@ -514,31 +429,4 @@
         If you're interested in contributing to the 2020 edition of the Web Almanac, please fill out our <a href="https://forms.gle/Qyf3q5pKgdH1cBhq5">interest form</a>. We'd love to hear your ideas for making this project even better!
       </p>
     </section>
-  </article>
-</main>
-{% endblock %}
-
-{% block scripts %}
-{{ super() }}
-<script nonce="{{ csp_nonce() }}">
-
-var indexBox = document.querySelector('.index-box');
-var indexBoxTitle = document.querySelector('.index .index-btn');
-
-indexBoxTitle.addEventListener('click', function(e) {
-  var indexOpen = indexBox.classList.toggle('show');
-  indexBoxTitle.setAttribute('aria-expanded',indexOpen);
-  var ariaLabel = indexOpen ?  "Close the Table of Contents" : "Open the Table of Contents";
-  indexBoxTitle.setAttribute('aria-label',ariaLabel);
-});
-        
-indexBox.addEventListener("keydown", function onPress(event) {
-  if (event.key === 'Escape') {
-    if (indexBoxTitle.getAttribute('aria-expanded') === 'true') {
-      indexBoxTitle.click();
-      indexBoxTitle.focus();
-    }
-  }
-});
-</script>
 {% endblock %}
