--- a/src/templates/fr/2019/index.html
+++ b/src/templates/fr/2019/index.html
@@ -1,166 +1,32 @@
-{% extends "fr/2019/base.html" %}
+{% extends "base/2019/index.html" %}
 
 {% block title %}Web Almanac 2019{% endblock %}
-
 {% block description %}Le Web Almanac est un rapport annuel sur l’état du Web qui combine l’expertise de la communauté Web avec les données et tendances de HTTP Archive.{% endblock %}
 
-{% block meta %}
-<meta name="description" content="{{ self.description() }}">
+{% block twitter_image_alt %}Web Almanac {{ year }}{% endblock %}
 
-<meta property="og:title" content="{{ self.title() }}">
-<meta property="og:url" content="https://almanac.httparchive.org{{  url_for(request.endpoint , year=year, lang=lang) }}">
-<meta property="og:image" content="https://almanac.httparchive.org/static/images/home-hero-bg.png">
-<meta property="og:image:height" content="562">
-<meta property="og:image:width" content="715">
-<meta property="og:type" content="article">
-<meta property="og:description" content="{{ self.description() }}">
+{% block date_published %}2019-11-04T12:00:00+00:00:00{% endblock %}
+{% block date_modified %}2019-11-04T12:00:00+00:00:00{% endblock %}
 
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@HTTPArchive">
-<meta name="twitter:title" content="{{ self.title() }}">
-<meta name="twitter:image" content="https://almanac.httparchive.org/static/images/home-hero-bg.png">
-<meta name="twitter:image:alt" content="Web Almanac {{ year }}" />
-<meta name="twitter:description" content="{{ self.description() }}">
+{% block breadcrumb_name_1 %}Page d’accueil {{ year }}{% endblock %}
 
-<script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "url": "https://almanac.httparchive.org",
-    "logo": "https://almanac.httparchive.org/static/images/ha.png"
-  }
-  </script>
-  <script type="application/ld+json">
-	{
-	  "@context": "http://schema.org",
-	  "@type": "Article",
-	  "mainEntityOfPage": {
-	  	  "@type": "WebPage",
-	  	  "@id": "https://almanac.httparchive.org{{  url_for(request.endpoint, **get_view_args(lang=language.lang_code, year=year)) }}"
-	  },
-	  "headline": "{{ self.title() }}",
-	  "image": {
-	  	  "@type": "ImageObject",
-	  	  "url": "https://almanac.httparchive.org/static/images/home-hero-bg.png",
-	  	  "height": 562,
-	  	  "width": 715
-	  },
-	  "publisher": {
-	  	  "@type": "Organization",
-	  	  "name": "Web Almanac by HTTP Archive",
-	  	  "logo": {
-	  	      "@type": "ImageObject",
-	  	      "url": "https://almanac.httparchive.org/static/images/ha.png",
-	  	      "height": 160,
-	  	      "width": 320
-	  	  }
-      },
-    "author":
-      {
-	  	  "@type": "Person",
-          "sameas": [
-            "https://almanac.httparchive.org{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}",
-            "https://twitter.com/rick_viscomi",
-            "https://github.com/rviscomi"
-            ],
-	  	  "name": "Rick Viscomi"
-      },
-      "description": "{{ self.description() }}",
-      "datePublished": "2019-11-04T12:00:00+00:00:00",
-      "dateModified": "2019-11-04T12:00:00+00:00:00"
-	}
-	</script>
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "BreadcrumbList",
-      "itemListElement": [{
-        "@type": "ListItem",
-        "position": 1,
-        "name": "Page d’accueil {{ year }} ({{ language }})",
-        "item": "https://almanac.httparchive.org{{  url_for('home', year=year, lang=lang) }}"
-      }]
-    }
-    </script>
+{% block intro_title %}Web Almanac{% endblock %}
+{% block intro_sub_title %}Rapport annuel<br>de HTTP Archive sur<br><b>l’état du Web</b>{% endblock %}
+
+{% block mission %}
+Notre mission est de combiner les statistiques brutes et les tendances de HTTP Archive avec l’expertise de la communauté web. Le Web Almanac est un rapport complet sur l’état du Web, soutenu par des données réelles et des experts du Web. Il est composé de 20 chapitres couvrant l’expérience utilisateur, le contenu des pages, leur publication et leur distribution.
 {% endblock %}
 
-{% block styles %}
-  {{ super() }}
-  <link rel="stylesheet" href="/static/css/index.css">
+{% block contributors_description %}
+Le Web Almanac a été rendu possible grâce au travail acharné de la communauté Web. {{ contributors }} personnes ont consacré bénévolement d’innombrables heures à le planifier, faire des recherches, le rédiger et le mettre à votre disposition.
 {% endblock %}
+{% block contributors_link %}See the contributors{% endblock %}
 
-{% block main %}
-<main id="maincontent">
-  <section class="intro-container">
-    <div class="intro">
-      <div class="intro-year">2019</div>
-      <h1 class="title title-lg title-alt">Web Almanac</h1>
-      <h2>
-        Rapport annuel<br>de HTTP Archive
-        sur<br><b>l’état du Web</b>
-      </h2>
-      <p>
-        Notre mission est de combiner les statistiques brutes et les tendances de HTTP Archive avec l’expertise de la communauté web. Le Web Almanac est un rapport complet sur l’état du Web, soutenu par des données réelles et des experts du Web. Il est composé de 20 chapitres couvrant l’expérience utilisateur, le contenu des pages, leur publication et leur distribution.
-      </p>
-      <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}" class="btn">
-        Commencer l’exploration
-      </a>
-    </div>
-    <div class="intro-image-2019-wrapper">
-      <div class="intro-image-2019"></div>
-    </div>
-    <div class="intro-image-wrapper">
-      <div class="intro-image"></div>
-    </div>
-  </section>
-  {% include "fr/2019/featured_chapters.html" %}
-  <section class="contributors-container alt-bg">
-    {% set contributors = config.contributors.keys() | length %}
-    <div class="contributors">
-      <h2 class="title title-alt">Contributeurs et contributrices</h2>
-      <p>
-          Le Web Almanac a été rendu possible grâce au travail acharné de la communauté Web. {{ contributors }} personnes ont consacré bénévolement d’innombrables heures à le planifier, faire des recherches, le rédiger et le mettre à votre disposition.
-      </p>
-      <a href="{{ url_for('contributors', year=year, lang=lang) }}" class="alt btn">
-        Voir les contributeurs et contributrices
-      </a>
-    </div>
-    <div class="people" aria-hidden="true">
-      <div class="people-number">{{ contributors }}</div>
-      <img id="character-markup" class="character" src="/static/images/character-markup.png" alt="" width="154" height="252" loading="lazy" />
-      <img id="character-star" class="character" src="/static/images/character-star.png" alt="" width="245" height="254" loading="lazy" />
-      <img id="character-hat" class="character" src="/static/images/character-hat.png" alt="" width="186" height="207" loading="lazy" />
-    </div>
-  </section>
-  <section class="methodology-container">
-    <div class="methodology">
-      <h2 class="title title-center">Méthodologie</h2>
-      <div class="methodology-data">
-        <div class="websites-tested">
-          <div>
-            Sites Web testés
-          </div>
-          <div>
-            5,8&nbsp;M
-          </div>
-        </div>
-        <div class="data-processed">
-          <div>
-              Données traitées
-          </div>
-          <div>
-            20,9&nbsp;TB
-          </div>
-        </div>
-      </div>
-      <p class="methodology-info">
-          Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac proviennent du jeu de données HTTP Archiven, un projet communautaire qui suit l’évolution de la construction du web depuis 2010. Grâce à WebPageTest et Lighthouse, HTTP Archive collecte chaque mois les métadonnées de près de 6 millions de sites Web et les insère dans une base de données publique BigQuery pour les analyser. Le jeu de données de juillet 2019 a servi de base aux mesures du Web Almanac. Pour plus d’informations, consultez la page Méthodologie.
-      </p>
-      <a href="{{ url_for('methodology', year=year, lang=lang) }}" class="alt btn">
-        En savoir plus sur la Méthodologie
-      </a>
-      <img class="methodology-characters" src="/static/images/methodology-characters.png" alt="" width="984" height="354" loading="lazy" />
-    </div>
-  </section>
-</main>
+{% block methodology_stat_1_title %}Sites Web testés{% endblock %}
+{% block methodology_stat_1 %}5,8&nbsp;M{% endblock %}
+{% block methodology_stat_2_title %}Données traitées{% endblock %}
+{% block methodology_stat_2 %}20,9&nbsp;TB{% endblock %}
+{% block methodology_description %}
+Sauf indication contraire, les statistiques des 20 chapitres du Web Almanac proviennent du jeu de données HTTP Archiven, un projet communautaire qui suit l’évolution de la construction du web depuis 2010. Grâce à WebPageTest et Lighthouse, HTTP Archive collecte chaque mois les métadonnées de près de 6 millions de sites Web et les insère dans une base de données publique BigQuery pour les analyser. Le jeu de données de juillet 2019 a servi de base aux mesures du Web Almanac. Pour plus d’informations, consultez la page Méthodologie.
 {% endblock %}
+{% block methodology_link %}En savoir plus sur la Méthodologie{% endblock %}
