--- a/src/templates/fr/2019/table_of_contents.html
+++ b/src/templates/fr/2019/table_of_contents.html
@@ -1,161 +1,17 @@
-{% extends "fr/2019/base.html" %}
+{% extends "base/2019/table_of_contents.html" %}
 
 {% block title %}Table des matières | Web Almanac 2019{% endblock %}
 
 {% block description %}Table des matières du Web Almanac 2019, listant chaque section : Contenu des pages, Expérience utilisateur, Publication du contenu, Diffusion du contenu.{% endblock %}
 
-{% block meta %}
-<meta name="description" content="{{ self.description() }}">
+{% block twitter_image_alt %}Méthodologie du Web Almanac {{ year }}{% endblock %}
 
-<meta property="og:title" content="{{ self.title() }}">
-<meta property="og:url" content="https://almanac.httparchive.org{{  url_for(request.endpoint, year=year, lang=lang) }}">
-<meta property="og:image" content="https://almanac.httparchive.org/static/images/methodology-characters-bg.png">
-<meta property="og:image:height" content="354">
-<meta property="og:image:width" content="984">
-<meta property="og:type" content="article">
-<meta property="og:description" content="{{ self.description() }}">
+{% block date_published %}2019-11-04T12:00:00+00:00:00{% endblock %}
+{% block date_modified %}2019-11-04T12:00:00+00:00:00{% endblock %}
 
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@HTTPArchive">
-<meta name="twitter:title" content="{{ self.title() }}">
-<meta name="twitter:image" content="https://almanac.httparchive.org/static/images/methodology-characters-bg.png">
-<meta name="twitter:image:alt" content="Méthodologie du Web Almanac {{ year }}" />
-<meta name="twitter:description" content="{{ self.description() }}">
+{% block breadcrumb_name_2 %}{{ year }} Table des matières{% endblock %}
 
-<script type="application/ld+json">
-	{
-	  "@context": "http://schema.org",
-	  "@type": "Article",
-	  "mainEntityOfPage": {
-	  	  "@type": "WebPage",
-	  	  "@id": "https://almanac.httparchive.org{{  url_for(request.endpoint, **get_view_args(lang=language.lang_code, year=year)) }}"
-	  },
-	  "headline": "{{ self.title() }}",
-	  "image": {
-	  	  "@type": "ImageObject",
-        "url": "https://almanac.httparchive.org/static/images/methodology-characters-bg.png",
-        "height": 354,
-	  	  "width": 984
-	  },
-	  "publisher": {
-	  	  "@type": "Organization",
-	  	  "name": "HTTP Archive",
-	  	  "logo": {
-	  	      "@type": "ImageObject",
-	  	      "url": "https://almanac.httparchive.org/static/images/ha.png",
-	  	      "height": 160,
-	  	      "width": 320
-	  	  }
-      },
-    "author":
-      {
-	  	  "@type": "Person",
-          "sameas": [
-            "https://almanac.httparchive.org{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}",
-            "https://twitter.com/rick_viscomi",
-            "https://github.com/rviscomi"
-            ],
-	  	  "name": "Rick Viscomi"
-      },
-      "description": "{{ self.description() }}",
-      "datePublished": "2019-11-04T12:00:00+00:00:00",
-      "dateModified": "2019-11-04T12:00:00+00:00:00"
-	}
-	</script>
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "BreadcrumbList",
-      "itemListElement": [{
-        "@type": "ListItem",
-        "position": 1,
-        "name": "Page d’accueil {{ year }} ({{ language }})",
-        "item": "https://almanac.httparchive.org{{  url_for('home', year=year, lang=lang) }}"
-      },{
-        "@type": "ListItem",
-        "position": 2,
-        "name": "{{ year }} Table des matières",
-        "item": "https://almanac.httparchive.org{{  url_for(request.endpoint, year=year, lang=lang) }}"
-      }]
-    }
-    </script>
-{% endblock %}
-
-{% block styles %}
-{{ super() }}
-<style>
-.main {
-  margin-bottom: 100px;
-}
-
-.contents-wrapper {
-  display: grid;
-  grid-template-areas: 'parts characters';
-}
-.parts {
-  grid-area: parts;
-  max-width: 600px;
-}
-.characters {
-  grid-area: characters;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-}
-.character {
-  max-width: 150px;
-  height: auto;
-}
-.part,
-.part-name,
-.chapter {
-  border-bottom: 1px solid #eee;
-  margin: 0;
-}
-.chapter:last-child {
-  border-bottom: none;
-}
-
-.part-name,
-.chapter {
-  padding: 20px 0;
-}
-
-.chapters {
-  padding-left: 20px;
-}
-
-.chapter .todo {
-  opacity: 0.3;
-}
-.chapter a {
-  text-decoration: none;
-  color: #1A2B49;
-}
-.chapter a:hover,
-.chapter a:focus {
-  text-decoration: underline;
-}
-@media (max-width: 600px) {
-  .contents-wrapper {
-    display: block;
-  }
-  .parts {
-    max-width: 100%;
-  }
-  .characters {
-    display: none;
-  }
-}
-</style>
-{% endblock %}
-
-{% block main %}
-<main id="maincontent" class="main">
-  <h1 class="title title-lg">Table des matières</h1>
-
-  <section>
+{% block foreward %}
     <h2>Avant-propos</h2>
 
     <p>
@@ -175,80 +31,7 @@
     </p>
 
     <p>— <em><a href="{{ url_for('contributors', year=year, lang=lang, _anchor='rviscomi') }}">Rick Viscomi</a>, créateur du Web Almanac</em></p>
-
-  </section>
-
-  {% 
-    set localizedPartTitles = {
-      "I. Page Content": "I. Contenu des pages",
-      "II. User Experience": "II. Expérience Utilisateur·ice",
-      "III. Content Publishing": "III. Publication de contenu",
-      "IV. Content Distribution": "IV. Diffusion du contenu"
-    }
-  %}
-  {%
-    set localizedChapterTitles = {
-      "JavaScript": "JavaScript",
-      "CSS": "CSS",
-      "Markup": "Balisage Web",
-      "Media": "Média",
-      "Third Parties": "Tierces Parties",
-      "Fonts": "Polices d’écriture",
-      "Performance": "Performance",
-      "Security": "Sécurité",
-      "Accessibility": "Accessibilité",
-      "SEO": "SEO",
-      "PWA": "PWA",
-      "Mobile Web": "Web Mobile",
-      "Ecommerce": "E-commerce",
-      "CMS": "CMS",
-      "Compression": "Compression",
-      "Caching": "Mise en cache",
-      "CDN": "CDN",
-      "Page Weight": "Poids des pages",
-      "Resource Hints": "Indices de Ressources",
-      "HTTP/2": "HTTP/2"
-    }
-  %}
-  <div class="contents-wrapper">
-    <div class="parts">
-      {% for part_config in config.outline %}
-        <section class="part">
-          <h2 class="part-name">Partie {{ localizedPartTitles[part_config.part] if localizedPartTitles[part_config.part]|length else chapter_config.title }}</h2>
-          <div class="chapters">
-            {% for chapter_config in part_config.chapters %}
-              <div class="chapter">
-                {% if chapter_config.todo %}
-                <span class="todo">Chapitre {{ chapter_config.chapter }}: {{ localizedChapterTitles[chapter_config.title] if localizedChapterTitles[chapter_config.title]|length else chapter_config.title }}</span>
-                {% else %}
-                <a href="{{ url_for('chapter', year=year, lang=lang, chapter=get_chapter_slug(chapter_config)) }}">
-                  Chapitre {{ chapter_config.chapter }}&nbsp;: {{ localizedChapterTitles[chapter_config.title] if localizedChapterTitles[chapter_config.title]|length else chapter_config.title }}
-                </a>
-                {% endif %}
-              </div>
-            {% endfor %}
-          </div>
-        </section>
-      {% endfor %}
-      <section class="part">
-        <h2 class="part-name">Annexes</h2>
-        <div class="chapters">
-          <div class="chapter">
-            <a href="{{ url_for('methodology', year=year, lang=lang) }}">Méthodologie</a>
-          </div>
-          <div class="chapter">
-            <a href="{{ url_for('contributors', year=year, lang=lang) }}">Contributeurs et contributrices</a>
-          </div>
-        </div>
-      </section>
-    </div>
-
-    <div class="characters">
-      <img class="character" src="/static/images/character-painter.png" alt="" loading="lazy" height="202" width="226" />
-      <img class="character" src="/static/images/character-file.png" alt="" loading="lazy" height="158" width="161" />
-      <img class="character" src="/static/images/character-star.png" alt="" loading="lazy" height="254" width="245" />
-      <img class="character" src="/static/images/character-hat.png" alt="" loading="lazy" height="207" width="186" />
-    </div>
-  </div>
-</main>
 {% endblock %}
+
+{% block appendix %}Annexes{% endblock %}
+
