--- a/src/templates/ja/2019/base_chapter.html
+++ b/src/templates/ja/2019/base_chapter.html
@@ -1,4 +1,4 @@
-{% extends "ja/2019/base.html" %}
+{% extends "base/2019/base_chapter.html" %}
 
 {% block title %}
 章 {{ chapter }} | HTTP ArchiveによるWeb年鑑
