--- a/src/templates/ja/2019/table_of_contents.html
+++ b/src/templates/ja/2019/table_of_contents.html
@@ -1,4 +1,4 @@
-{% extends "ja/2019/base.html" %}
+{% extends "base/2019/table_of_contents.html" %}
 
 {% block title %}
 2019年 | HTTP ArchiveによるWeb年鑑
